[tool.poetry]
name = "markupclassification"
version = "0.1.0"
description = ""
authors = ["Alexander Kustenkov <kustaa@ispras.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
transformers = "^4.39.0"
torch = "^2.2.1"
beautifulsoup4 = "^4.12.3"
iprogress = "^0.4"
evaluate = "^0.4.1"
seqeval = "^1.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
